changed to webp

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <h2 class="section-title">Meet the Team</h2>
     <div class="team">
       <div class="team-card">
-        <img src="images/Saran_photo.jpg" alt="Team Member 1">
+        <img src="images/Saran_photo.webp" alt="Team Member 1">
         <h3>Dr. Saran Aadhar</h3>
         <p>Project Supervisor</p>
       </div>
       <div class="team-card">
-        <img src="images/mayank.jpg" alt="Team Member 2">
+        <img src="images/mayank.webp" alt="Team Member 2">
         <h3>Mayank Tiwari</h3>
         <p>PhD Student</p>
       </div>
       <div class="team-card">
-        <img src="images/dp.jpeg" alt="Team Member 3">
+        <img src="images/dp.webp" alt="Team Member 3">
         <h3>Jason Daniel</h3>
         <p>B.Tech Student</p>
       </div>
