changed to webp

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <p>PhD Student</p>
       </div>
       <div class="team-card">
+        <img src="images/dibyaranjan.webp" alt="Team Member 2">
+        <h3>Dibyaranjan Parida</h3>
+        <p>PhD Student</p>
+      </div>
+      <div class="team-card">
         <img src="images/dp.webp" alt="Team Member 3">
         <h3>Jason Daniel</h3>
         <p>B.Tech Student</p>
