--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h2 class="section-title">Our Projects</h2>
     <div class="project-overview">
       <h3>Project Title: Hydrological Data Monitoring and Analysis Platform</h3>
-      <p>Description: The Hydrological Data Monitoring and Analysis Platform is an advanced toolset designed to enhance water resource management through data-driven insights. This platform integrates cutting-edge technologies to collect, visualize, and analyze hydrological data, enabling researchers, policymakers, and environmentalists to make informed decisions. With interactive tools like the Wain Web App for real-time data visualization and the Damin Web App for in-depth analysis, this platform empowers users to address the challenges of water monitoring and management effectively.</p>
+      <p>Description: The Hydrological Data Monitoring and Analysis Platform is an advanced toolset designed to enhance water resource management through data-driven insights. This platform integrates cutting-edge technologies to collect, visualize, and analyze hydrological data, enabling researchers, policymakers, and environmentalists to make informed decisions. With interactive tools like the WAIN Web App for real-time data visualization and the DAM-IN Web App for in-depth analysis, this platform empowers users to address the challenges of water monitoring and management effectively.</p>
       <div class="project-links">
         <a class="project-link" href="https://hydromonitoring.github.io/wain-dataset/" target="_blank">Visit WAIN Web App</a>
-        <a class="project-link" href="https://hydromonitoring.github.io/damin-dataset/" target="_blank">Visit DAMIN Web App</a>
+        <a class="project-link" href="https://hydromonitoring.github.io/damin-dataset/" target="_blank">Visit DAM-IN Web App</a>
       </div>
     </div>
   </section>
