added back button

--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Hydromonitoring Lab - Water Resource Management Research at IIT Jodhpur
+    </title>
+    <meta
+      name="description"
+      content="Hydromonitoring Lab at IIT Jodhpur specializes in hydrological data monitoring and analysis for better water resource management through WAIN and DAM-IN platforms."
+    />
+    <meta
+      name="keywords"
+      content="hydromonitoring, hydrological data, water resource management, WAIN, DAM-IN, IIT Jodhpur"
+    />
+    <meta name="author" content="Hydromonitoring Lab IIT Jodhpur" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hydromonitoring Lab - Water Resource Management Research at IIT Jodhpur</title>
-  <meta name="description" content="Hydromonitoring Lab at IIT Jodhpur specializes in hydrological data monitoring and analysis for better water resource management through WAIN and DAM-IN platforms.">
-  <meta name="keywords" content="hydromonitoring, hydrological data, water resource management, WAIN, DAM-IN, IIT Jodhpur">
-  <meta name="author" content="Hydromonitoring Lab IIT Jodhpur">
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <header>
+      <h1>Hydromonitoring Lab - IIT Jodhpur</h1>
+      <!-- <p class="tagline">Advancing Water Resource Management Through Data Science</p> -->
+    </header>
 
-<body>
-  <header>
-    <h1>Hydromonitoring Lab - IIT Jodhpur</h1>
-    <!-- <p class="tagline">Advancing Water Resource Management Through Data Science</p> -->
-  </header>
-  
-  <nav>
-    <a href="#projects">Projects</a>
-    <!-- <a href="#publications">Publications</a> -->
-    <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  
-  <section id="projects">
-    <h2 class="section-title">Our Projects</h2>
-    <div class="project-overview">
-      <h3>Hydrological Data Monitoring and Analysis Platform</h3>
-      <p>The Hydrological Data Monitoring and Analysis Platform is a user-friendly set of tools designed to support better water resource management through data-based understanding. It helps collect, view, and study hydrological data in an organized way. The platform includes the WAIN Web App and the DAM-IN Web App, which allow users to explore data interactively and carry out detailed hydrological analysis. This platform aims to assist researchers, policymakers, and environmental experts in making well-informed decisions and managing water resources more effectively.</p>
-      <div class="project-links">
-        <a class="project-link" href="https://hydromonitoring.github.io/wain-dataset/" target="_blank">Visit WAIN Web App</a>
-        <a class="project-link" href="https://hydromonitoring.github.io/damin-dataset/" target="_blank">Visit DAM-IN Web App</a>
+    <nav>
+      <a href="#projects">Projects</a>
+      <!-- <a href="#publications">Publications</a> -->
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+    </nav>
+
+    <section id="projects">
+      <h2 class="section-title">Our Projects</h2>
+      <div class="project-overview">
+        <h3>Hydrological Data Monitoring and Analysis Platform</h3>
+        <p>
+          The Hydrological Data Monitoring and Analysis Platform is a
+          user-friendly suite of tools designed to enhance water resource
+          management through data-driven understanding. It enables the organized
+          collection, visualization, and analysis of hydrological data. The
+          platform includes two interactive web applications: the WAIN Web App
+          and the DAM-IN Web App, which support detailed hydrological analysis
+          and data exploration.
+        </p>
+        <p>
+          The WAIN Web App focuses on the watershed features of streamflow
+          stations, allowing users to examine the watershed dynamics associated
+          with these monitoring points. In contrast, the DAM-IN Web App is
+          dedicated to analyzing dam catchment characteristics, offering
+          insights into dam-related hydrology.
+        </p>
+        <p>
+          This platform is designed to assist researchers, policymakers, and
+          environmental professionals in making informed decisions and advancing
+          sustainable water resource management.
+        </p>
+        <div class="project-links">
+          <a
+            class="project-link"
+            href="https://hydromonitoring.github.io/wain-dataset/"
+            >Visit WAIN Web App</a
+          >
+          <a
+            class="project-link"
+            href="https://hydromonitoring.github.io/damin-dataset/"
+            >Visit DAM-IN Web App</a
+          >
+        </div>
       </div>
-    </div>
-  </section>
-  
-  <!-- <section id="publications">
+    </section>
+
+    <!-- <section id="publications">
     <h2 class="section-title">Research Publications</h2>
     <div class="publications-list">
       <div class="publication-item">
@@ -47,37 +82,52 @@
       </div>
     </div>
   </section> -->
-  
-  <section id="team">
-    <h2 class="section-title">Meet the Team</h2>
-    <div class="team">
-      <div class="team-card">
-        <img src="images/Saran_photo.webp" alt="Dr. Saran Aadhar, Project Supervisor at Hydromonitoring Lab">
-        <h3>Dr. Saran Aadhar</h3>
-        <p>Project Supervisor</p>
+
+    <section id="team">
+      <h2 class="section-title">Meet the Team</h2>
+      <div class="team">
+        <div class="team-card">
+          <img
+            src="images/Saran_photo.webp"
+            alt="Dr. Saran Aadhar, Project Supervisor at Hydromonitoring Lab"
+          />
+          <h3>Dr. Saran Aadhar</h3>
+          <p>Project Supervisor</p>
+        </div>
+        <div class="team-card">
+          <img
+            src="images/mayank.webp"
+            alt="Mayank Tiwari, PhD Student at Hydromonitoring Lab"
+          />
+          <h3>Mayank Tiwari</h3>
+          <p>PhD Student</p>
+        </div>
+        <div class="team-card">
+          <img
+            src="images/dibyaranjan.webp"
+            alt="Dibyaranjan Parida, PhD Student at Hydromonitoring Lab"
+          />
+          <h3>Dibyaranjan Parida</h3>
+          <p>PhD Student</p>
+        </div>
+        <div class="team-card">
+          <img
+            src="images/dp.webp"
+            alt="Jason Daniel, B.Tech Student at Hydromonitoring Lab"
+          />
+          <h3>Jason Daniel</h3>
+          <p>B.Tech Student</p>
+        </div>
       </div>
-      <div class="team-card">
-        <img src="images/mayank.webp" alt="Mayank Tiwari, PhD Student at Hydromonitoring Lab">
-        <h3>Mayank Tiwari</h3>
-        <p>PhD Student</p>
-      </div>
-      <div class="team-card">
-        <img src="images/dibyaranjan.webp" alt="Dibyaranjan Parida, PhD Student at Hydromonitoring Lab">
-        <h3>Dibyaranjan Parida</h3>
-        <p>PhD Student</p>
-      </div>
-      <div class="team-card">
-        <img src="images/dp.webp" alt="Jason Daniel, B.Tech Student at Hydromonitoring Lab">
-        <h3>Jason Daniel</h3>
-        <p>B.Tech Student</p>
-      </div>
-    </div>
-  </section>
-  
-  <section id="contact">
-    <h2 class="section-title">Contact Us</h2>
-    <p style="text-align: center;">For inquiries, email us at <a href="mailto:saran.aadhar@iitj.ac.in">saran.aadhar@iitj.ac.in</a>.</p>
-    <!-- <div class="contact-details">
+    </section>
+
+    <section id="contact">
+      <h2 class="section-title">Contact Us</h2>
+      <p style="text-align: center">
+        For inquiries, email us at
+        <a href="mailto:saran.aadhar@iitj.ac.in">saran.aadhar@iitj.ac.in</a>.
+      </p>
+      <!-- <div class="contact-details">
       <address>
         <h3>Our Location</h3>
         <p>Hydromonitoring Lab<br>
@@ -87,43 +137,42 @@
         Jodhpur, Rajasthan 342037, India</p>
       </address>
     </div> -->
-  </section>
-  
-  <footer>
-    <p>© 2025 Hydromonitoring Lab IIT Jodhpur</p>
-  </footer>
-  
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ResearchOrganization",
-    "name": "Hydromonitoring Lab IIT Jodhpur",
-    "description": "Research lab focused on hydrological data monitoring and analysis",
-    "url": "https://hydromonitoring.github.io/lab-datasets/",
-    "member": [
-      {
-        "@type": "Person",
-        "name": "Dr. Saran Aadhar",
-        "jobTitle": "Project Supervisor"
-      },
-      {
-        "@type": "Person",
-        "name": "Mayank Tiwari",
-        "jobTitle": "PhD Student"
-      },
-      {
-        "@type": "Person",
-        "name": "Dibyaranjan Parida",
-        "jobTitle": "PhD Student"
-      },
-      {
-        "@type": "Person",
-        "name": "Jason Daniel",
-        "jobTitle": "B.Tech Student"
-      }
-    ]
-  }
-  </script>
-</body>
+    </section>
 
+    <footer>
+      <p>© 2025 Hydromonitoring Lab IIT Jodhpur</p>
+    </footer>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ResearchOrganization",
+        "name": "Hydromonitoring Lab IIT Jodhpur",
+        "description": "Research lab focused on hydrological data monitoring and analysis",
+        "url": "https://hydromonitoring.github.io/lab-datasets/",
+        "member": [
+          {
+            "@type": "Person",
+            "name": "Dr. Saran Aadhar",
+            "jobTitle": "Project Supervisor"
+          },
+          {
+            "@type": "Person",
+            "name": "Mayank Tiwari",
+            "jobTitle": "PhD Student"
+          },
+          {
+            "@type": "Person",
+            "name": "Dibyaranjan Parida",
+            "jobTitle": "PhD Student"
+          },
+          {
+            "@type": "Person",
+            "name": "Jason Daniel",
+            "jobTitle": "B.Tech Student"
+          }
+        ]
+      }
+    </script>
+  </body>
 </html>
