added back button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           stations, allowing users to examine the watershed dynamics associated
           with these monitoring points. In contrast, the DAM-IN Web App is
           dedicated to analyzing dam catchment characteristics, offering
-          insights into dam-related hydrology.
+          insights into dam-catchment-related hydrology.
         </p>
         <p>
           This platform is designed to assist researchers, policymakers, and
